mass-cal: update preview, show extrapolation